# Taktix

./: .appveyor.yml  .clang-format  .codedocs  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.ci/: ci_linux.sh  ci_linux_discord.sh  ci_osx.sh  ci_osx_discord.sh  ci_windows.bat  ci_windows_discord.ps1
.github/: ISSUE_TEMPLATE.md
Application/: CMakeLists.txt  main.cpp
Assets/: settings.txt
Assets/Maps/: lake.map
CMake/: CompileFlags.cmake
Documentation/: Doxyfile.in
Includes/Core/: GraphicsSettings.hpp  State.hpp  StateManager.hpp  StateManager.inl  Taktix.hpp  Taktix.inl
Includes/Map/: Map.hpp
Includes/States/: FirstState.hpp  SecondState.hpp  SettingsState.hpp  SplashScreenState.hpp
Sources/Core/: GraphicsSettings.cpp  State.cpp  StateManager.cpp  Taktix.cpp
Sources/Map/: Map.cpp
Sources/States/: FirstState.cpp  SecondState.cpp  SettingsState.cpp  SplashScreenState.cpp
Tests/: CMakeLists.txt
Themes/: default.txt
