SET( APP_TARGET "Taktix" )

SET(
    APP_LIBRARIES
    ${SFML_LIBRARIES}
    ${TGUI_LIBRARY}
)

FILE( GLOB_RECURSE APP_SOURCES *.cpp )
FILE( GLOB_RECURSE APP_HEADERS *.hpp )
FILE( GLOB_RECURSE APP_INLINES *.inl )

ADD_EXECUTABLE(
    ${APP_TARGET}
    ${APP_SOURCES}
    ${APP_HEADERS}
    ${APP_INLINES}
    ${TAKTIX_SOURCES}
)

TARGET_LINK_LIBRARIES(
    ${APP_TARGET}
    ${APP_LIBRARIES}
)

MESSAGE( ${CMAKE_CURRENT_BINARY_DIR} )
MESSAGE( ${CMAKE_CURRENT_SOURCE_DIR} )

FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/../Assets" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/." )
FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/../Themes" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/." )